<resources>
    <string name="app_name">Social Network</string>
    <string name="admin">adminstrator</string>
    <string name="user">user</string>
    <string name="group">group</string>
    <string name="addUser">add user</string>
    <string name="xmlView">view network xml</string>
    <string name="analysis">network analysis</string>
    <string name="addFriend">add friend</string>
    <string name="deleteFriend">delete friend</string>
    <string name="addPost">add post</string>
    <string name="like">show posts</string>
    <string name="friendList">show friends</string>
    <string name="suggestFriend">suggest friends</string>
</resources>
