<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fady.socialnetwork.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#8a77e7"
        android:orientation="vertical"
        android:id="@+id/admin">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/administrator_icon"
            android:layout_gravity="center"
            android:layout_weight="7"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/admin"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:fontFamily="casual"
            android:textColor="#08080a"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#dd90ec"
        android:orientation="vertical"
        android:id="@+id/user">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/user"
            android:layout_gravity="center"
            android:layout_weight="7"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/user"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:fontFamily="casual"
            android:textColor="#08080a"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#fc6ca8"
        android:orientation="vertical"
        android:id="@+id/group">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/group"
            android:layout_gravity="center"
            android:layout_weight="7"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/group"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:fontFamily="casual"
            android:textColor="#08080a"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>

</LinearLayout>
