<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#445566"
    android:orientation="vertical"
    tools:context="com.example.fady.socialnetwork.UserOptionsActivity"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="#88ffffff"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:id="@+id/add_friends"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:src="@drawable/add_friend"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceSmall"
                android:textStyle="bold"
                android:fontFamily="casual"
                android:text="@string/addFriend"
                android:textColor="#000000"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="#88ffffff"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:id="@+id/delete_friends"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="6"

                android:src="@drawable/delete_friend"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceSmall"
                android:textStyle="bold"
                android:fontFamily="casual"
                android:text="@string/deleteFriend"
                android:textColor="#000000"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="#88ffffff"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:id="@+id/add_post"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:src="@drawable/add_post"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceSmall"
                android:textStyle="bold"
                android:fontFamily="casual"
                android:text="@string/addPost"
                android:textColor="#000000"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="#88ffffff"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:id="@+id/show_posts"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:src="@drawable/show_posts"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceSmall"
                android:textStyle="bold"
                android:fontFamily="casual"
                android:text="@string/like"
                android:textColor="#000000"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="5dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="#88ffffff"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:id="@+id/show_friends"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:src="@drawable/show_friends"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceSmall"
                android:textStyle="bold"
                android:fontFamily="casual"
                android:text="@string/friendList"
                android:textColor="#000000"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="#88ffffff"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:id="@+id/suggest_friend"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:src="@drawable/suggest_friend"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceSmall"
                android:textStyle="bold"
                android:fontFamily="casual"
                android:text="@string/suggestFriend"
                android:textColor="#000000"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
